# jd

./: .gitignore  Cargo.toml  README.md  jd  jd-cli
raycast/jd-navigator/: package-lock.json  package.json  raycast-env.d.ts
raycast/jd-navigator/src/: actions.tsx  jd.ts  notes.tsx  search.tsx
scripts/: dev_fixture.sh  install.sh  jd.zsh  uninstall.sh
src/: fs_walk.rs  ignore.rs  io.rs  lib.rs  main.rs  md.rs  meta.rs  model.rs  mutate.rs  plan.rs  preview.rs  resolve.rs  state.rs  tests_unit.rs  tsv.rs
src/ui/: actions.rs  app.rs  keymap.rs  mod.rs  prompt.rs  render.rs  rows.rs  search.rs  theme.rs
tests/: basic.rs  fixture_rebuild.rs  mutations.rs  ui_app.rs
tests/fixtures/: T99_contents.sh  T99_tree.txt
