[package]
name = "jd-helper"
version = "0.1.0"
edition = "2021"
description = "Filesystem-first Johnny Decimal navigation helper"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
plist = "1.6"
home = "0.5"
once_cell = "1.19"
sha1 = "0.10"
ratatui = "0.29"
nucleo-matcher = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"

